--- a/frontend/src/components/Feedback/addfeedback.css
+++ b/frontend/src/components/Feedback/addfeedback.css
@@ -1,6 +1,9 @@
 #move{
-    background-color: gray;
+    
     margin-bottom: 40px;
+    position:relative; 
+     top:80px;
+     height:380px;
 }
 
 .name2 h3 {
@@ -38,5 +41,5 @@ background-color:rgb(97, 24, 56);
     height: 300px;
     position: relative;
     left: 50%;
-    top: 30%;
+    bottom: 300px;
 }
