--- a/frontend/src/components/user/Profile.css
+++ b/frontend/src/components/user/Profile.css
@@ -55,5 +55,7 @@ html, body {
   /* padding-bottom: 20%; */
     /* padding: 20px; */
   /* float: left; */
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
+  /* border: cornsilk; */
+  /* border-radius: 10px; */
 }
