--- a/frontend/src/components/Favorite/favoriteList.css
+++ b/frontend/src/components/Favorite/favoriteList.css
@@ -1,5 +1,25 @@
-img{
-    height: 20%;
-    width: 20%;
+#pic{
+    height: 8%;
+    width: 100%;
 
+}
+#favtrip{
+  padding-top: 40px;
+  border-style: ridge;
+}
+td{
+    background-color: cornsilk;
+
+}
+table{
+    border-collapse: separate;
+    border-spacing: 14px 0px;
+    ;
+    border: crimson;
+    border-style: ridge;
+    padding: 0%;
+
+}
+p{
+  text-align: center;
 }
