favorite list styling

--- a/frontend/src/components/Favorite/favoriteList.css
+++ b/frontend/src/components/Favorite/favoriteList.css
@@ -1,25 +1,37 @@
 #pic{
     height: 8%;
-    width: 100%;
-
+    width: auto;
+    position: relative;
+    align-items: center;
 }
 #favtrip{
-  padding-top: 40px;
-  border-style: ridge;
+  padding-top: 60px;
+  font-size: x-large;
+  color: rgb(25, 25, 119);
+  font-family: 'Times New Roman', Times, serif;
+  /* border-style: ridge; */
 }
 td{
     background-color: cornsilk;
-
-}
+    }
+    
 table{
     border-collapse: separate;
-    border-spacing: 14px 0px;
-    ;
-    border: crimson;
-    border-style: ridge;
-    padding: 0%;
+    border-spacing: 20px 10px;
+    /* border: crimson; */
+    /* border-style: ridge; */
+    padding: 5%;
+    /* background-color: darkblue; */
 
 }
 p{
   text-align: center;
 }
+
+/* #favoriteList{
+    /* background-color: chartreuse; */
+/* } */
+
+/* tr{
+    background-color: darkgoldenrod;
+} */
