--- a/frontend/src/components/user/Profile.css
+++ b/frontend/src/components/user/Profile.css
@@ -35,6 +35,7 @@ html, body {
 .text{
   font-family: 'Roboto Mono', monospace;
   font-weight: bold;
+  text-align: center;
 }
 
 #profile{
@@ -44,12 +45,15 @@ html, body {
   flex: 25%;
   padding: 20px;
 }
+#booked{
+  text-align: center;
+}
 
 #row{
-  display: flex;
+  display: flex ;
   flex-wrap: wrap;
 } 
-
+/* 
 #favoriteList{
   /* height:120vh; */
   /* padding-bottom: 20%; */
@@ -58,4 +62,4 @@ html, body {
   /* background-color: aquamarine; */
   /* border: cornsilk; */
   /* border-radius: 10px; */
-}
+ /* } */ 
