--- a/frontend/src/components/Feedback/addfeedback.css
+++ b/frontend/src/components/Feedback/addfeedback.css
@@ -11,7 +11,8 @@
     font-weight: bold;
     position: relative;
     left: 12%;
-    color:rgb(97, 24, 56) 
+    color:black;
+    font-size: 30px;
 
 
 }
@@ -29,7 +30,7 @@
 position: relative;
 left: 5%;
 border-radius: 25px;
-width: 80px;
+width: 100px;
 height: 40px;
 background-color:rgb(97, 24, 56); 
 
@@ -42,4 +43,14 @@ background-color:rgb(97, 24, 56);
     position: relative;
     left: 50%;
     bottom: 300px;
+}
+
+
+
+.button{
+    color:white;
+}
+
+#root1{
+    position: relative;
 }
