--- a/frontend/src/components/Favorite/favorite.css
+++ b/frontend/src/components/Favorite/favorite.css
@@ -1,11 +1,11 @@
 #add{
-    border-radius:20px;
-    width: 150px;
-    height: 50px;
+    /* border-radius:20px; */
+    border: none;
+    border-color: white;
+    height: 60px;
+    width: 100px;
+    margin-right:20% ;
     margin-top: 10%;
-    text-align: center;
-    color:white
-    ;
-    background-color: rgb(97, 24, 56)
-    ;
+    background-color: white;
+
 }
