--- a/frontend/src/components/Feedback/feedback.css
+++ b/frontend/src/components/Feedback/feedback.css
@@ -1,20 +1,57 @@
 #root1 {
-background-color: green;
+
 position: relative;
 bottom: 340px;
 left:60%;
 width: 500px;
-height: 600px;
+height: 500px;
+font-weight: bold;
+font-size: 30px;
 
 }
 
 #root1 #show{
-    background-color: hotpink;
-    width: 500px;
-    height: 100px;
+   position: relative;
+   bottom: 60px;
+    width: 600px;
+    height: 300px;
     
 }
 
 #text{
     color: black;
+    position: relative;
+    right: 200px;
+    border: black;
+    border-radius: 10px;
+    top: 13px;
+}
+#feed {
+   position: relative;
+   /* bottom:50px;  */
+   bottom: 25px;
+   right: 40px;
+}
+
+#contain{
+  
+    border-radius: 25px;
+    border-color: rgb(97, 24, 56);
+    border-style: solid ;
+    border-width: 1px;
+    position: relative;
+    height: 65px;
+    width: 450px;
+    left: 20px;
+    margin-top: 10px;
+    /* border-width:30px; */
+    
+}
+
+#in{
+    position: relative;
+    left: 50px;
+    font-size: medium;
+    font-weight: normal;
+
 }
